--- a/container.css
+++ b/container.css
@@ -10,7 +10,7 @@
     padding: 10px 20px;
 }
 
-.top-nav {
+.top {
     display: flex;
     justify-content: space-between;
     font-size: 12px;
@@ -26,7 +26,7 @@
     cursor: pointer;
 }
 
-.main-nav {
+.main{
     display: flex;
     align-items: center;
     justify-content: space-between;
