--- a/header.css
+++ b/header.css
@@ -101,7 +101,7 @@ text-decoration: none; /* 去掉下划线 */
 }
 .three{
     border: 10px solid black;
-    height:150px;
+    height:100px;
     display: flex;
     justify-content: center;
     margin-right: 10px;
@@ -114,4 +114,10 @@ text-decoration: none; /* 去掉下划线 */
     justify-content: center;
     margin-right: 10px;
     margin-left: 10px;
+}
+
+
+
+.b{
+    border: 10px solid blue;
 }
