--- a/header.css
+++ b/header.css
@@ -26,7 +26,7 @@
     cursor: pointer;
 }
 
-.main{
+.main-nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -67,6 +67,15 @@
 .cart-icon {
     font-size: 24px;
     cursor: pointer;
+}
+.cart-icon button {
+    background:#FF7043;
+    color: white;
+    border: none;
+    padding: 8px 50px;
+    cursor: pointer;
+    border-radius: 0 5px 5px 0;
+    font-size: 25px;
 }
 
 .categories {
