--- a/main.css
+++ b/main.css
@@ -1,11 +1,53 @@
 main{
-    border: 10px solid blue;
     .two{
-        border: 10px solid black;
         height:350px;
         display: flex;
         justify-content: center;
-        margin-right: 10px;
-        margin-left: 10px;
+        margin-right: 15%;
+        margin-left: 15%;
     }
+    .a{
+        flex-direction: column;
+    }
+    .g{
+        width: auto;
+        height: 50%;
+    }
+    .image-container {
+        position: relative; /*疊在圖片上*/
+        width: 100%;
+        height: 100%;
+      }
+  
+      .image-container img {
+        width: 100%;
+        height: 100%;
+        display: block;/*圖片會完全符合容器寬度，並且不會有多餘的空白*/
+      }
+  
+      .arrow-button {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+        font-size: 20px;
+      }
+  
+      .arrow-left {
+        left: 10px;
+      }
+  
+      .arrow-right {
+        right: 10px;
+      }
+  
+      .arrow-button:hover {
+        background-color: rgba(0, 0, 0, 0.7);
+      }
+
 }
+
