--- a/header.css
+++ b/header.css
@@ -90,7 +90,7 @@ header{
         text-decoration: none;
     }
     a {
-    color: inherit; /* 使用继承的颜色（通常是黑色） */
+    color: inherit; 
     text-decoration: none; /* 去掉下划线 */
     }
 }
