--- a/footer.css
+++ b/footer.css
@@ -1,8 +1,8 @@
 footer{
-    border: 10px solid blue;
+    /* border: 10px solid blue; */
 
     .four{
-        border: 10px solid rgb(0, 0, 0);
+        /* border: 10px solid rgb(0, 0, 0); */
         height:150px;
         display: flex;
         justify-content: center;
@@ -28,7 +28,7 @@ footer{
     }
     
     .three{
-    border: 10px solid black;
+    /* border: 10px solid black; */
     height: auto;
     display: flex;
     justify-content: center;
@@ -39,7 +39,7 @@ footer{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 10px;
+        gap: 75px;
     }
     .button-icon {
         display: flex;
@@ -49,16 +49,32 @@ footer{
         border: none;
         background: none;
         cursor: pointer;
-        width: 40px;
+        width: 60px;
         padding: 5px;
     }
     .button-icon i {
         font-size: 24px;
-        margin-bottom: 5px;
-        color: #ff5722;
+        line-height: 3;
+        margin-bottom: 10px;
     }
-    .button-icon span {
-        font-size: 12px;
+    .icon-green {
+        color: #00C2B3;
+    }
+    
+    .icon-orange {
+        color: #FF5722;
+    }
+    
+    .icon-red {
+        color: #E3002C;
+    }
+    
+    .icon-blue {
+        color: #0066CC;
+    }
+    .button-icon div {
+        font-size: 16px;
         color: #333;
+        line-height: 1.2;
     }
 }
