--- a/footer.css
+++ b/footer.css
@@ -41,6 +41,9 @@ footer{
         justify-content: center;
         gap: 75px;
     }
+    .categories a{
+        text-decoration: none;
+    }
     .button-icon {
         display: flex;
         flex-direction: column;
